--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.2",
     "font-awesome": "^4.7.0",
     "react": "^18.3.1",
